--- a/_posts/2020-06-11-doctorat.md
+++ b/_posts/2020-06-11-doctorat.md
@@ -2,13 +2,14 @@
 layout: post
 title:  "Appel à candidatures pour un contrat doctoral"
 date:   2020-06-11
-categories: articles
+categories: actualités
 
 ---
 
 Le labex Les passés dans le Présent et l’Université Paris Lumières lancent un appel à candidatures pour un contrat doctoral flèche sur le projet Ledoux qui s’inscrit dans le programme scientifique 2020-2024.
 
-Pour les critères d’éligibilité et la constitution du dossier, cf. http://passes-present.eu/node/44348
+Pour les critères d’éligibilité et la constitution du dossier,\
+cf. <http://passes-present.eu/node/44348>
 
 **Date de candidature : 15 juillet 2020**
 
@@ -35,7 +36,7 @@ Le travail d’édition scientifique et numérique suppose d’étudier conjoint
 
 ## Recherche confiée au doctorant
 
-Le doctorant réalisera l’inventaire de l’oeuvre gravé dispersé dans les collections publiques et privées, en France comme à l’étranger, ainsi que celui des dessins préparatoires, souvent mal ou non identifiés. Cet inventaire servira de référence pour l’étude de l’oeuvre bâti et projeté de Ledoux. Il procédera à l’étude matérielle, technique et esthétique des estampes comme des dessins, dont la connaissance approfondie lui permettra de renouveler plusieurs problématiques de l’historiographie ledolcienne, parmi lesquelles la chronologie du travail éditorial, la contribution de Ledoux au dessin et à la gravure d’architecture et le rapport de l’architecte aux graveurs de son temps. Sa recherche contribuera également à faire progresser la connaissance de la gravure d’architecture et des graveurs actifs durant la seconde moitié du XVIIIe siècle, notamment par un travail de recherche biographique. Du début de la décennie 1770 aux premières années du XIXe siècle, l’architecte s’adressa en effet à plus d’une vingtaine d’entre eux, dont certains fort réputés, mais dont le travail demeure à ce jour dans l’ensemble fort méconnu. 
+Le doctorant réalisera l’inventaire de l’oeuvre gravé dispersé dans les collections publiques et privées, en France comme à l’étranger, ainsi que celui des dessins préparatoires, souvent mal ou non identifiés. Cet inventaire servira de référence pour l’étude de l’oeuvre bâti et projeté de Ledoux. Il procédera à l’étude matérielle, technique et esthétique des estampes comme des dessins, dont la connaissance approfondie lui permettra de renouveler plusieurs problématiques de l’historiographie ledolcienne, parmi lesquelles la chronologie du travail éditorial, la contribution de Ledoux au dessin et à la gravure d’architecture et le rapport de l’architecte aux graveurs de son temps. Sa recherche contribuera également à faire progresser la connaissance de la gravure d’architecture et des graveurs actifs durant la seconde moitié du XVIII<sup>e</sup> siècle, notamment par un travail de recherche biographique. Du début de la décennie 1770 aux premières années du XIX<sup>e</sup> siècle, l’architecte s’adressa en effet à plus d’une vingtaine d’entre eux, dont certains fort réputés, mais dont le travail demeure à ce jour dans l’ensemble fort méconnu. 
 
 L’étude de l’illustration de cet ouvrage, considéré tantôt comme un objet singulier tantôt comme la source du renouvellement de la gravure d’architecture au début du XIXe siècle, devrait permettre au doctorant d’écrire un chapitre important de l’histoire du livre d’architecture entre époque moderne et contemporaine. 
 
@@ -79,7 +80,7 @@ La ComUE, accompagnée de nombreux partenaires, fonctionne en confédération
 
 Inscrite à la fois sur le territoire d’Ile-de-France, tout comme à l’international avec plusieurs projets scientifiques, la ComUE UPL porte aussi : une formation expérimentale et pluridisciplinaire le Nou- veau Collège des Etudes Politiques (NCEP) depuis 2016 ; une Ecole Universitaire de Recherche (EUR) ArTeC, un Nouveaux Cursus à l’Université (NCU) So Skilled !, le labex Les passés dans le présent, et l’IDEFI CréaTIC. Elle œuvre sur l’ensemble des disciplines de sciences humaines et so- ciales et s’intéresse aussi à d’autres domaines en sciences exactes ou du vivant (biologie, informa- tique, mathématiques, etc.). La ComUE porte un réel intérêt aux Humanités numériques et s’inscrit dans la dynamique de La Science ouverte.
 
-Pour plus d’informations : www.u-plum.fr
+Pour plus d’informations : <www.u-plum.fr>
 
 ## Critères d’éligibilité et constitution du dossier
 
@@ -93,4 +94,4 @@ cf. <https://www.u-plum.fr/wp-content/uploads/2020/05/AAP-UPL-Labex-passé-dans-
 - Audition en visioconférence par le jury constitué : entre le 1<sup>er</sup> et le 11 septembre 2020
 - Annonce des résultats : 11 septembre 2020 (au plus tard)
 
-*En fonction des recommandations gouvernementales en lien avec le virus Covid-19, le calendrier est susceptible d’être modifié. Vous en serez informé.e.s. sur la page du Labex consacrée au recrutement http://passes-present.eu/node/44348. En l’état, lors du présent lancement de cet appel à candidatures, l’ensemble de la procédure est dématérialisée et les auditions sont prévues en visioconférence.*
+*En fonction des recommandations gouvernementales en lien avec le virus Covid-19, le calendrier est susceptible d’être modifié. Vous en serez informé.e.s. sur la page du Labex consacrée au recrutement <http://passes-present.eu/node/44348>. En l’état, lors du présent lancement de cet appel à candidatures, l’ensemble de la procédure est dématérialisée et les auditions sont prévues en visioconférence.*
