--- a/_posts/2020-06-11-doctorat.md
+++ b/_posts/2020-06-11-doctorat.md
@@ -13,7 +13,7 @@ cf. <http://passes-present.eu/node/44348>
 
 **Date de candidature : 15 juillet 2020**
 
-## Profil de poste pour le contrat doctoral « Projet Ledoux »
+## Profil de poste
 
 Le projet LEDOUX du labex Les passés dans le présent consiste en la réalisation d’une édition scientifique numérique et collaborative de l’ouvrage de Claude-Nicolas Ledoux de 1804, *L’architecture considérée sous le rapport de l’art, des moeurs et de la législation*. Il s’inscrit au croisement des thématiques du labex relatives à l’expérience originale de l’écriture du temps et au processus de constitution de la mémoire d’une oeuvre (construite et écrite) pour le futur.
 
